<resources>
    <string name="app_name">StegoPNG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app">About App</string>
    <string name="camera">Camera</string>
    <string name="stego_in">stego_in</string>
    <string name="stego_aus">stego_aus</string>
    <string name="key_and_message">Key and Message</string>
    <string name="show_key">Show key</string>
</resources>
